# FlexiHMI-MQTT

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build-default.yml
components/: README_NETWORK.md
components/backlight_manager/: CMakeLists.txt  backlight_manager.cpp
components/backlight_manager/include/: backlight_manager.h
components/config_manager/: CMakeLists.txt  config_manager.cpp
components/config_manager/include/: config_manager.h
components/ethernet/: CMakeLists.txt  ethernet_init.c
components/ethernet/include/: ethernet_init.h
components/hmi_widgets/: CMakeLists.txt  arc_widget.cpp  bar_widget.cpp  button_widget.cpp  checkbox_widget.cpp  container_widget.cpp  dropdown_widget.cpp  gauge_widget.cpp  gauge_widget.cpp.back  hmi_widget.cpp  image_widget.cpp  label_widget.cpp  led_widget.cpp  line_chart_widget.cpp  slider_widget.cpp  spinner_widget.cpp  switch_widget.cpp  tabview_widget.cpp  widget_registry.cpp
components/hmi_widgets/include/: arc_widget.h  bar_widget.h  button_widget.h  checkbox_widget.h  container_widget.h  dropdown_widget.h  gauge_widget.h  hmi_widget.h  image_widget.h  label_widget.h  led_widget.h  line_chart_widget.h  slider_widget.h  spinner_widget.h  switch_widget.h  tabview_widget.h  widget_registry.h
components/http_server/: CMakeLists.txt  http_server.cpp
components/http_server/include/: http_server.h
components/jc1060wp470c_i_w_y_bsp/: CMakeLists.txt  Kconfig  idf_component.yml
components/jc1060wp470c_i_w_y_bsp/include/bsp/: config.h  display.h  esp-bsp.h  jc1060wp470c_i_w_y.h  lvgl.h  touch.h
components/jc1060wp470c_i_w_y_bsp/src/: jc1060wp470c_i_w_y_bsp.c
components/lan_manager/: CMakeLists.txt  lan_manager.cpp
components/lan_manager/include/: lan_manager.h
components/mqtt_manager/: CMakeLists.txt  mqtt_manager.cpp
components/mqtt_manager/include/: mqtt_manager.h
components/settings_ui/: CMakeLists.txt  settings_ui.cpp  settings_ui_original.cpp
components/status_info_ui/: CMakeLists.txt  status_info_ui.cpp
components/wireless_manager/: CMakeLists.txt  wireless_manager.cpp
docs/: ASYNC_WIFI_FIX.md  ESP_HOSTED_SETUP.md  INITIAL_SPEC.md  NETWORK_CONFIG_PERSISTENCE.md  NETWORK_MANAGERS.md  UI_REDESIGN.md  WIDGETS.md  mqtt_driven_dynamic_hmi_esp_32_lvgl.md
examples/: IMAGE_WIDGET_README.md  README_EXAMPLES.md  TABVIEW_DEMO.md  TESTING.md  complete_demo.json  image_example.json  image_supplier.png.base64.txt  image_tank.png.base64.txt  image_water-tank.png.base64.txt  interactive_complete_demo.json  publish_sine_chart.py  switch_example.json  tabview_demo.json
examples/images/: BASE64_IMAGE_TESTING.md  convert.py  convert_to_pjpg.py  encode_image_to_base64.py  gpu.qoi  gpu.qoi.base64.txt  image_atm.png.base64.txt  industrial.base64.txt  industrial.qoi  industrial.qoi.base64.txt  iot.qoi  iot.qoi.base64.txt  lena.qoi  lena.qoi.base64.txt  pc.qoi  pc.qoi.base64.txt
examples/json/: README.md  button_example.json  complete_demo.json  empty.json  gauge_demo.json  gauge_example.json  gauge_example_0.json  image_example.json  interactive_complete_demo.json  label_example.json  led_light_example.json  line_chart_example.json  send_mqtt_json.sh  single_screen_example.json  slider_example.json  switch_example.json  tabview_demo.json
examples/screnshots/: animated.gif:Zone.Identifier
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main.cpp
tools/: create_combined_bin.py  create_combined_bin.sh
(+91 files in other folders)
