idf_component_register(
    SRCS 
        "main.c"
        "main.cpp"
    INCLUDE_DIRS 
        "."
    REQUIRES
        ethernet
        esp_timer
        freertos
        espressif__esp32_p4_function_ev_board
        hmi_widgets
        mqtt_manager
        config_manager
        settings_ui
        status_info_ui
        wireless_manager
        lan_manager
        backlight_manager
        mqtt
)
