idf_component_register(
    SRCS 
        "hmi_widget.cpp"
        "widget_registry.cpp"
        "label_widget.cpp"
        "button_widget.cpp"
        "container_widget.cpp"
        "switch_widget.cpp"
        "slider_widget.cpp"
    INCLUDE_DIRS 
        "include"
    REQUIRES
        lvgl__lvgl
        freertos
        json
        mqtt_manager
)
